tests/snapshots/cli_matrix__row_001_nowrap_in_place.snap
---
source: tests/cli_matrix.rs
expression: in_place_result.envelope(&in_place_case)
---
case: row_001_nowrap
mode: in_place
args: --ellipsis --footnotes --code-emphasis --headings --in-place
status: code: 0

[stdout]

[stderr]

[file]
Rust
~~~~
fn main() {
    println!("dots...");
}
~~~~

Outside… text.

1. first
4. second
