tests/snapshots/cli_matrix__row_001_wrap_stdout.snap
---
source: tests/cli_matrix.rs
expression: stdout_result.envelope(&stdout_case)
---
case: row_001_wrap
mode: stdout
args: --wrap --ellipsis --footnotes --code-emphasis --headings
status: code: 0

[stdout]
Rust
~~~~
fn main() {
    println!("dots...");
}
~~~~

Outside… text.

1. first
4. second

[stderr]

[file]
<not applicable>
