tests/snapshots/cli_matrix__row_010_nowrap_check.snap
---
source: tests/cli_matrix.rs
expression: result.envelope(&case)
---
case: row_010_nowrap
mode: check
args: --breaks --fences --code-emphasis --headings --check
status: code: 0

[stdout]

[stderr]
1 file left unchanged.

[file]
<not applicable>
