tests/snapshots/cli_matrix__row_010_nowrap_diff.snap
---
source: tests/cli_matrix.rs
expression: result.envelope(&case)
---
case: row_010_nowrap
mode: diff
args: --breaks --fences --code-emphasis --headings --diff
status: code: 0

[stdout]

[stderr]
1 file left unchanged.

[file]
<not applicable>
