tests/snapshots/cli_matrix__row_010_wrap_check.snap
---
source: tests/cli_matrix.rs
expression: result.envelope(&case)
---
case: row_010_wrap
mode: check
args: --wrap --breaks --fences --code-emphasis --headings --check
status: code: 1

[stdout]
input.dat +2 -1

[stderr]
1 file would be reformatted.

[file]
<not applicable>
