tests/snapshots/cli_matrix__row_010_wrap_in_place.snap
---
source: tests/cli_matrix.rs
expression: in_place_result.envelope(&in_place_case)
---
case: row_010_wrap
mode: in_place
args: --wrap --breaks --fences --code-emphasis --headings --in-place
status: code: 0

[stdout]

[stderr]

[file]
This paragraph references item 1 and uses enough words to demonstrate wrapping
behaviour when the wrap variant is enabled.

1. https://example.com/alpha
3. https://example.com/beta
